--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.510.0",
     "next": "15.1.3",
+    "next-themes": "^0.4.6",
     "next-view-transitions": "^0.3.0",
     "ogl": "^1.0.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-gtm-module": "^2.0.11",
+    "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
     "react-typewriter-effect": "^1.1.0",
     "tailwind-merge": "^2.4.0"
