--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gsap": "^3.13.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.510.0",
+    "mathjs": "^15.1.0",
     "next": "15.1.3",
     "next-themes": "^0.4.6",
     "next-view-transitions": "^0.3.0",
