--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.510.0",
     "mathjs": "^15.1.0",
+    "motion": "^12.26.1",
     "next": "15.1.3",
     "next-themes": "^0.4.6",
     "next-view-transitions": "^0.3.0",
